# direct-hs

./: .editorconfig  .gitignore  .gitmodules  .restyled.yaml  LICENSE  README.md  brittany.yaml  cabal.project  direct-hs.cabal  stack.yaml
.circleci/: config.yml
app/: direct4b.hs
direct-hs/: direct-hs.cabal  stack.yaml
direct-hs-examples/: README.md  direct-hs-examples.cabal
direct-hs-examples/src/: Common.hs  direct4bi.hs  login.hs  nippo.hs  observe-pretty.hs  ping.hs
direct-hs/app/: direct4b.hs
direct-hs/src/Web/: Direct.hs
direct-hs/src/Web/Direct/: Api.hs  Channel.hs  Client.hs  DirectRPC.hs  Exception.hs  Internal.hs  Map.hs  Message.hs  Types.hs  Upload.hs
direct-hs/src/Web/Direct/Client/: Channel.hs  Status.hs
direct-hs/src/Web/Direct/Client/Channel/: Types.hs
direct-hs/src/Web/Direct/DirectRPC/: Map.hs
direct-hs/test/Web/Direct/: InternalSpec.hs
direct4bi/: ChangeLog.md  README.md  direct4bi.cabal
direct4bi/app/: Main.hs
direct4bi/src/Web/Direct/CLI/: Interactive.hs
marvin-direct/: marvin-direct.cabal
marvin-direct/app/: direct4b.hs  get-direct-access-token.hs
marvin-direct/src/Network/MessagePack/: ClientViaWebSockets.hs
marvin-direct/src/Web/: Direct.hs
network-messagepack-rpc/: messagepack-rpc.cabal  network-messagepack-rpc.cabal
network-messagepack-rpc-websocket/: messagepack-rpc-websocket.cabal  network-messagepack-rpc-websocket.cabal
network-messagepack-rpc-websocket/src/Network/MessagePack/RPC/Client/: WebSocket.hs
network-messagepack-rpc-websocket/test/Network/MessagePack/RPC/Client/: WebSocketSpec.hs
network-messagepack-rpc/src/Data/MessagePack/: RPC.hs
network-messagepack-rpc/src/Network/MessagePack/RPC/: Client.hs
network-messagepack-rpc/src/Network/MessagePack/RPC/Client/: Internal.hs
scripts/: dump.hs  parse-int64.hs
skews/: .editorconfig  LICENSE  README.md  mock-ws-server.cabal  skews.cabal  stack.yaml
skews/src/Network/WebSockets/: MockServer.hs  Skews.hs
skews/test/Network/WebSockets/: MockServerSpec.hs  SkewsSpec.hs
src/Data/MessagePack/: RPC.hs
src/Network/MessagePack/: ClientViaWebSockets.hs
src/Network/MessagePack/Async/: Client.hs
src/Network/MessagePack/Async/Client/: WebSocket.hs
src/Network/MessagePack/RPC/: Client.hs
src/Web/: Direct.hs  Login.hs
src/Web/Direct/: Api.hs  Client.hs  Exception.hs  LoginInfo.hs  Map.hs  Message.hs  PersistedInfo.hs  Types.hs  Utils.hs
test/Network/MessagePack/Async/Client/: WebSocketSpec.hs
wscat-msgpack/: ChangeLog.md  README.md  wscat-msgpack.cabal
wscat-msgpack/app/: Main.hs
wscat-msgpack/src/Network/WebSockets/: WsCatMsgPack.hs
wss-client/: ChangeLog.md  README.md  stack.yaml  ws-client.cabal  wss-client.cabal
wss-client/app/: Main.hs  sample.hs
wss-client/src/Network/WebSockets/: Client.hs
wss-client/test/Data/String/: StripSpec.hs
wss-client/test/Network/WebSockets/: ClientSpec.hs
