name:                direct-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iij-ii/direct-hs
license:             Apache-2.0
license-file:        LICENSE
author:              Yuji Yamamoto
maintainer:          yuji-yamamoto@iij.ad.jp
copyright:           2018 Yuji Yamamoto
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Web.Direct
  other-modules:   Web.Direct.Types
                 , Network.MessagePack.ClientViaWebSockets
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bytestring
    , unordered-containers
    , data-msgpack
    , errors
    , mwc-random
    , network
    , network-uri
    , safe
    , stm
    , text
    , uuid
    , websockets
    , wuss
  default-language: Haskell2010

executable direct4b
  main-is: direct4b.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , directory
    , filepath
    , direct-hs
    , optparse-applicative
    , envy
    , text
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/iij-ii/direct-hs
