name:                direct-hs
version:             0.1.0.0
synopsis:            Bot library for direct.
description:         Bot library for [direct](https://direct4b.com)
homepage:            https://github.com/iij-ii/direct-hs
license:             BSD3
license-file:        LICENSE
author:              Yuji Yamamoto and Kazu Yamamoto
maintainer:          yuji-yamamoto@iij.ad.jp, kazu@iij.ad.jp
copyright:           2018 Yuji Yamamoto
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: Web.Direct
  other-modules:   Web.Direct.Api
                   Web.Direct.Client
                   Web.Direct.Map
                   Web.Direct.Message
                   Web.Direct.PersistedInfo
                   Web.Direct.Types
                   Web.Direct.Utils
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bytestring
    , data-msgpack
    , errors
    , network-messagepack-rpc
    , network-messagepack-rpc-websocket
    , mwc-random
    , text
    , unordered-containers
    , uuid
  default-language: Haskell2010

executable direct4b
  main-is: direct4b.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , bytestring
    , data-msgpack
    , directory
    , filepath
    , direct-hs
    , optparse-applicative
    , envy
    , text
    , network-messagepack-rpc
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/iij-ii/direct-hs
