name:                direct-hs-examples
version:             0.1.0.0
synopsis:            Direct BOT examples
description:         Example BOTs of Direct in Haskell
homepage:            https://github.com/iij-ii/direct-hs-examples
license:             BSD3
license-file:        LICENSE
author:              Kazu Yamamoto
maintainer:          kazu@iij.ad.jp
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable login
  main-is: login.hs
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  build-depends:
      base >=4.7 && <5
    , bytestring
    , data-msgpack
    , direct-hs
    , directory
    , filepath
    , text
  default-language: Haskell2010

executable ping
  main-is: ping.hs
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  build-depends:
      base >=4.7 && <5
    , bytestring
    , data-msgpack
    , direct-hs
    , text
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/iij-ii/direct-hs-examples
