cabal-version:       2.2
name:                direct-hs-examples
version:             0.1.0.0
synopsis:            Direct BOT examples
description:         Example BOTs of Direct in Haskell
homepage:            https://github.com/iij-ii/direct-hs/tree/master/direct-hs-examples
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kazu Yamamoto
maintainer:          kazu@iij.ad.jp
category:            Web
build-type:          Simple

common deps
  build-depends:
      base >=4.7 && <5
    , bytestring
    , direct-hs

executable login
  import: deps
  main-is: login.hs
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  build-depends:
      directory
    , filepath
    , text
  default-language: Haskell2010
  other-modules: Common

executable ping
  import: deps
  main-is: ping.hs
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  build-depends:
      text
  default-language: Haskell2010
  other-modules: Common

executable nippo
  import: deps
  main-is: nippo.hs
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  build-depends:
      signal
    , text
  default-language: Haskell2010
  other-modules: Common

executable observe-pretty
  import: deps
  main-is: observe-pretty.hs
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  build-depends:
      pretty-simple
    , envy
  default-language: Haskell2010
  other-modules: Common

executable direct4bi
  import: deps
  main-is: direct4bi.hs
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  build-depends:
      errors
    , filepath
    , haskeline
    , optparse-applicative
    , pretty-simple
    , text
  default-language: Haskell2010
  other-modules: Common

source-repository head
  type:     git
  location: https://github.com/iij-ii/direct-hs
