name:                direct-hs
version:             0.1.0.0
synopsis:            Bot library for direct.
description:         Bot library for [direct](https://direct4b.com)
homepage:            https://github.com/iij-ii/direct-hs/tree/master/direct-hs
license:             BSD3
license-file:        LICENSE
author:              Yuji Yamamoto and Kazu Yamamoto
maintainer:          yuji-yamamoto@iij.ad.jp, kazu@iij.ad.jp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: Web.Direct
                   Web.Direct.Internal
  other-modules:   Web.Direct.Api
                   Web.Direct.Client
                   Web.Direct.Client.Channel
                   Web.Direct.Client.Channel.Types
                   Web.Direct.Client.Status
                   Web.Direct.DirectRPC
                   Web.Direct.DirectRPC.Map
                   Web.Direct.Exception
                   Web.Direct.LoginInfo
                   Web.Direct.Message
                   Web.Direct.Types
                   Web.Direct.Upload
                   Web.Direct.Utils
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bytestring
    , containers
    , data-msgpack
    , errors
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , mtl
    , mwc-random
    , network-messagepack-rpc
    , network-messagepack-rpc-websocket
    , stm
    , text
    , unordered-containers
    , uuid
  default-language: Haskell2010

executable direct4b
  main-is: direct4b.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , bytestring
    , data-msgpack
    , directory
    , filepath
    , direct-hs
    , optparse-applicative
    , envy >= 2.0.0.0
    , text
    , mime-types
    , network-messagepack-rpc
  default-language: Haskell2010

test-suite direct-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Web.Direct.InternalSpec
  build-depends:
      base
    , direct-hs
    , hspec
    , text
    , mtl
    , network-messagepack-rpc
    , data-msgpack-types
  build-tool-depends:
      hspec-discover:hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iij-ii/direct-hs
