cabal-version: 1.12

name:           direct4bi
version:        0.1.0.0
description:    Interactive CLI client app for direct4b.com
homepage:       https://github.com/iij-ii/direct-hs/tree/master/direct4bi
author:         Yuji Yamamoto
maintainer:     yuji-yamamoto@iij.ad.jp
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/iij-ii/direct-hs

library
  exposed-modules:
      Web.Direct.CLI.Interactive
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , direct-hs
    , errors
    , filepath
    , haskeline
    , optparse-applicative
    , pretty-simple
    , text
  if os(windows)
    build-depends:
        Win32
  default-language: Haskell2010

executable direct4bi
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , direct4bi
  default-language: Haskell2010
