name:                messagepack-rpc-websocket
version:             0.1.0.0
synopsis:            WebSocket backend for MessagePack RPC
description:         WebSocket backend for "messagepack-rpc"
homepage:            https://github.com/iij-ii/messagepack-rpc-websocket
license:             BSD3
license-file:        LICENSE
author:              Yuji Yamamoto and Kazu Yamamoto
maintainer:          yuji-yamamoto@iij.ad.jp, kazu@iij.ad.jp
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Network.MessagePack.RPC.Client.WebSocket
  build-depends:
      base >= 4.7 && < 5
    , messagepack-rpc
    , text
    , websockets
    , wss-client >= 0.2
  default-language: Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Network.MessagePack.RPC.Client.WebSocketSpec
  build-depends:       base
    , QuickCheck
    , async
    , bytestring
    , data-msgpack
    , envy
    , hspec
    , messagepack-rpc
    , messagepack-rpc-websocket
    , skews
    , text
    , wss-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iij-ii/messagepack-rpc-websocket
