name:                mock-ws-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iij-ii/mock-ws-server#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Yuji Yamamoto
maintainer:          yuji-yamamoto@iij.ad.jp
copyright:           2018 Yuji Yamamoto
category:            Web, Test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.WebSockets.MockServer
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , websockets
  default-language:    Haskell2010

test-suite mock-ws-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Network.WebSockets.MockServerSpec
  build-depends:       base
                     , mock-ws-server
                     , bytestring
                     , envy
                     , hspec
                     , network
                     , websockets
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/igrep/mock-ws-server
