name:           wscat-msgpack
version:        0.1.0.0
description:    Please see the README on gitlab at <https://gitlab.com/igrep/wscat-msgpack>
homepage:       https://gitlab.com/igrep/wscat-msgpack
bug-reports:    https://gitlab.com/igrep/wscat-msgpack/issues
author:         Yuji Yamamoto
maintainer:     yuji-yamamoto@iij.ad.jp
copyright:      2018 Yuji Yamamoto
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://gitlab.com/igrep/wscat-msgpack

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , data-msgpack
    , errors
    , websockets
  exposed-modules:
      Network.WebSockets.WsCatMsgPack
  default-language: Haskell2010

executable wscat-msgpack
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , wscat-msgpack
  default-language: Haskell2010

test-suite wscat-msgpack-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , wscat-msgpack
  default-language: Haskell2010
